--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,11 @@ body {
   background-color: #F0F0F0;
 }
 
+div#pdf-report iframe {
+  height: 100vh;
+  width: 100vw;
+}
+
 a {
   color: inherit;
   text-decoration: none;
